--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="alternate icon" href="{{ url_for('static', filename='images/favicon-light.svg') }}" type="image/svg+xml" media="(prefers-color-scheme: light)">
     <link rel="alternate icon" href="{{ url_for('static', filename='images/favicon-dark.svg') }}" type="image/svg+xml" media="(prefers-color-scheme: dark)">
     
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/animations.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
